--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "dependencies": {
+    "glob": "^7.1.3",
     "jazz-midi": "^1.6.4",
     "jzz": "^0.5.7",
     "jzz-midi-smf": "^1.0.3"
