--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "neuron",
+  "name": "spectrum2mpe",
   "version": "0.0.1",
-  "description": "Next generation software for music production.",
-  "main": "app.js",
+  "description": "Convert spectrum data into MPE compatible midi-file.",
+  "main": "index.js",
   "directories": {
     "lib": "lib"
   },
+  "scripts": {
+    "test": "mocha"
+  },
   "dependencies": {
+    "chai": "^4.2.0",
     "glob": "^7.1.3",
     "jazz-midi": "^1.6.4",
     "jzz": "^0.5.7",
     "jzz-midi-smf": "^1.0.3",
+    "lodash": "^4.17.11",
+    "mocha": "^5.2.0",
+    "moment": "^2.22.2",
     "node-osc": "^2.1.0"
   },
   "devDependencies": {},
-  "scripts": {
-    "start": "node app.js"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/szk2s/Neuron.git"
+    "url": "git+https://github.com/szk2s/spectrum2mpe.git"
   },
   "keywords": [
     "MPE",
-    "Matrix",
     "Music",
     "MIDI",
-    "generator"
+    "spectrum"
   ],
   "author": "SATOSHI SUZUKI",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/szk2s/Neuron/issues"
+    "url": "https://github.com/szk2s/spectrum2mpe/issues"
   },
-  "homepage": "https://github.com/szk2s/Neuron#readme"
+  "homepage": "https://github.com/szk2s/spectrum2mpe#readme"
 }
