--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
-    "node-osc": "^2.1.0"
+    "node-osc": "^2.1.0",
+    "plotly": "^1.0.6"
   },
   "devDependencies": {
     "eslint": "^5.10.0"
