--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "plotly": "^1.0.6"
   },
   "devDependencies": {
-    "eslint": "^5.10.0"
+    "eslint": "^5.10.0",
+    "rimraf": "^2.6.2"
   },
   "repository": {
     "type": "git",
