--- a/package.json
+++ b/package.json
@@ -28,8 +28,15 @@
     "eslint": "^5.10.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
     "prettier": "^1.15.3",
     "rimraf": "^2.6.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm test"
+    }
   },
   "repository": {
     "type": "git",
