install socket.io

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "node-osc": "^2.1.0",
-    "plotly": "^1.0.6"
+    "plotly": "^1.0.6",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
