Add example of converting json file from Matlab

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,12 @@
             "request": "launch",
             "name": "examples/readSMF.js",
             "program": "${workspaceFolder}/examples/readSMF.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "examples/convertFromMatlab.js",
+            "program": "${workspaceFolder}/examples/convertFromMatlab.js"
         }
     ]
 }
