--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,11 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "node",
             "request": "launch",
-            "name": "examples/convert.js",
-            "program": "${workspaceFolder}/examples/convert.js"
+            "name": "examples/convertFromSpear.js",
+            "program": "${workspaceFolder}/examples/convertFromSpear.js"
         },
         {
             "type": "node",
