--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "test": "mocha --timeout 150000",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "build": "babel src/ -d lib/",
+    "prepublish": "yarn run build"
   },
   "dependencies": {
     "chai": "^4.2.0",
@@ -24,10 +26,13 @@
     "plotly": "^1.0.6"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^5.10.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "flow-bin": "^0.91.0",
     "husky": "^1.3.1",
     "prettier": "^1.15.3",
     "rimraf": "^2.6.2"
