Setup babel and Flow
- You can use 'import' statement for module
- Add Eslint setting for Flow

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,13 +6,15 @@
     "parser": "babel-eslint",
     "extends": [
         "eslint:recommended", 
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "plugin:flowtype/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 2015
     },
     "plugins": [
-        "prettier" 
+        "prettier",
+        "flowtype"
     ],
     "rules": {
         "no-console": "off",
