--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "presets": ["flow"]
+  "presets": [
+    "flow", 
+    [
+      "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+    ]
+  ]
 }
