--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "mocha --timeout 150000",
+    "pretest": "yarn run build",
     "lint": "eslint . --fix",
     "build": "babel src/ -d lib/",
     "prepublish": "yarn run build"
@@ -28,9 +29,11 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^5.10.0",
     "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-flowtype": "^3.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "flow-bin": "^0.91.0",
     "husky": "^1.3.1",
