--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-flowtype": "^3.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "flow-bin": "^0.91.0",
+    "flow-typed": "^2.5.1",
     "husky": "^1.3.1",
     "prettier": "^1.15.3",
     "rimraf": "^2.6.2"
