--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "prepublish": "yarn run build"
   },
   "dependencies": {
-    "chai": "^4.2.0",
     "glob": "^7.1.3",
     "jazz-midi": "^1.6.4",
     "jzz": "^0.5.7",
     "jzz-midi-smf": "^1.0.3",
     "lodash": "^4.17.11",
     "mime-types": "^2.1.21",
-    "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "node-osc": "^2.1.0",
     "plotly": "^1.0.6"
@@ -38,6 +36,7 @@
     "flow-bin": "^0.91.0",
     "flow-typed": "^2.5.1",
     "husky": "^1.3.1",
+    "jest": "^24.0.0",
     "prettier": "^1.15.3",
     "rimraf": "^2.6.2"
   },
