--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "mocha --timeout 150000",
+    "test": "jest",
     "pretest": "yarn run build",
     "lint": "eslint . --fix",
     "build": "babel src/ -d lib/",
