Reorganize babel environment

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
   "presets": [
-    "flow", 
+    "@babel/preset-flow",
     [
-      "env",
-        {
-          "targets": {
-            "node": "current"
-          }
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current"
         }
+      }
     ]
   ]
 }
