--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepublish": "yarn run build"
   },
   "dependencies": {
+    "babel-core": "7.0.0-bridge.0",
     "glob": "^7.1.3",
     "jazz-midi": "^1.6.4",
     "jzz": "^0.5.7",
@@ -25,10 +26,13 @@
     "plotly": "^1.0.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
+    "babel-jest": "^23.4.2",
     "eslint": "^5.10.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-flowtype": "^3.2.1",
